# muelthaler.com

./: .env  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
base/: forms.py  models.py  urls.py  views.py
base/templates/: 403.html  404.html  master.html
base/templates/base/: contact.html  home.html  open_cv.html  parallax.html
goal/: admin.py  models.py  urls.py  views.py
goal/migrations/: 0001_initial.py  0002_match_pre_report.py  0002_player_profile_picture.py  0003_alter_match_pre_report_alter_match_report.py  0003_remove_goal_scored_at_goal_goals_scored_match_and_more.py  0004_alter_match_pre_report_alter_match_report.py  0004_match_opponent.py
goal/templates/goal/: main.html  match.html
goal/templatetags/: custom_filters.py
kam/: urls.py  views.py
kam/templates/kam/: kam.html
personal-webpage/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/: projects.css  style.css  style_goals.css  style_kam.css  style_parallax.css
static/img/: hero-3840.avif  hero.avif
static/js/: parallax.js  projects.js
templates/: 403.html  404.html  master.html
templates/base/: contact.html  hidden_index.html  home.html
